<resources>
    <string name="app_name">Og-artiiwwan Kutaa 5ffaa</string>
    <string name="about_us">About us</string>
    <string name="more_apps">More apps</string>
    <string name="rate">Rate</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="change_style">Change style</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="phone">Phone</string>
    <string name="version">Version - </string>
    <string name="download_more_apps">Download more apps</string>
    <string name="kitaaba_kutaa_7ffaa">Kitaaba Kutaa 7ffaa</string>
    <string name="kitaaba_gadaa">Kitaaba Gadaa</string>
    <string name="kitaaba_kutaa_5ffaa">Kitaaba Kutaa 5ffaa</string>
    <string name="download">Download</string>
    <string name="privacy_title">Privacy</string>
    <string name="download_now">Download Now</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="contact_us">Contact us</string>
    
    <string name="fb_interstitial_ads_about_us">269798475392144_269800995391892</string>
    <string name="fb_banner_ads_about_us">269798475392144_269800828725242</string>

    <string name="fb_interstitial_ads_detail">269798475392144_269805372058121</string>
    <string name="fb_banner_ads_detail">269798475392144_269805225391469</string>

    <string name="fb_banner_ads_privacy">269798475392144_269799888725336</string>
    <string name="fb_banner_ads_main">269798475392144_269799888725336</string>
    <string name="fb_interstitial_ads_main">269798475392144_269800088725316</string>

    <string name="follow_us_on_facebook">Follow us on Facebook</string>
    <string name="app_icon">App icon</string>
    <string name="subtitle_section">Subtitle/Section</string>
    <string name="chapter_title">Chapter Title</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="arrow_to_right">Arrow to right</string>
    <string name="support_amp_community"><![CDATA[Support & Community]]></string>

    <string name="google_app_open_ads_unit_id" translatable="false">ca-app-pub-8504401574247581/2146110241</string>
    <string name="google_banner_ads_unit_id" translatable="false">ca-app-pub-8504401574247581/8662868393</string>
    <string name="google_interstitial_ads_unit_id" translatable="false">ca-app-pub-8504401574247581/7126920280</string>
    <string name="google_rewarded_interstitial_ads_unit_id" translatable="false">ca-app-pub-8504401574247581/1713197600</string>
    <string name="google_rewarded_ads_unit_id" translatable="false">ca-app-pub-8504401574247581/7398015962</string>
    <string name="google_native_ads_unit_id" translatable="false">ca-app-pub-8504401574247581/2098386587</string>

</resources>