<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_primary" android:checkableBehavior="single">
        <item
            android:id="@+id/action_more_apps"
            android:icon="@drawable/ic_baseline_read_more_24"
            android:title="@string/more_apps" />

        <item
            android:id="@+id/action_about_us"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/about_us" />

        <item
            android:id="@+id/action_update"
            android:icon="@drawable/ic_baseline_update_24"
            android:title="@string/update" />
    </group>

    <item android:title="@string/support_amp_community">
        <menu>
            <item
                android:id="@+id/action_privacy"
                android:icon="@drawable/baseline_privacy_tip_24"
                android:title="@string/privacy_title" />

            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share" />

            <item
                android:id="@+id/action_rate"
                android:icon="@drawable/ic_baseline_star_rate_24"
                android:title="@string/rate" />

        </menu>
    </item>

    <group android:id="@+id/group_exit">
        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/ic_baseline_close_24"
            android:title="@string/exit" />
    </group>

</menu>