<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.BookDetailActivity">

    <RelativeLayout
        android:id="@+id/toolbar_Rl"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/nav_header_bg"
        android:elevation="4dp">

        <ImageButton
            android:id="@+id/back_book_detail"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/back_book_detail"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_book_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fontFamily="sans-serif-medium"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/chapter_title"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/sub_title_book_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:ellipsize="marquee"
                android:fontFamily="sans-serif"
                android:singleLine="true"
                android:text="@string/subtitle_section"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:minHeight="50dp"
        android:orientation="vertical" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:layout_above="@id/banner_container"
        android:layout_below="@id/toolbar_Rl" >

        <LinearLayout
            android:id="@+id/pdfPagesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" />
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="12dp"
        android:elevation="8dp"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/previous"
            app:fabCustomSize="40dp"
            app:srcCompat="@drawable/baseline_arrow_upward_24"
            app:tint="@color/white"
            app:backgroundTint="@color/colorPrimaryDark" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next"
            app:fabCustomSize="40dp"
            app:srcCompat="@drawable/baseline_arrow_downward_24"
            app:tint="@color/white"
            app:backgroundTint="@color/colorPrimaryDark" />

    </LinearLayout>

</RelativeLayout>